--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -18,5 +18,5 @@
   <div class="videochat2">
     <img src="assets/videochat.png">
   </div>
-  
 </div>
+<div class="white-space" style="height:70px; background:white;"></div>
