--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,7 +28,9 @@
       <% end %>
         </li>
     <% else %>
-        <li class="load" onclick="LoginPage()"><img src="/assets/load.png">
+        <li class="load" id="load" 
+        <%# onclick="LoginPage()" %>
+        ><img src="/assets/load.png">
           <p class="play">使ってみる</p>
         </li>
     <% end %>
