--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
     <%= render 'layouts/header' %>
      
     <%= yield %>
-    <%= debug(params) if Rails.env.development? %>
+    <%# <# %= debug(params) if Rails.env.development? % > %>
     
     <%= render 'layouts/footer' %>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js">
